fix: refactor code style