@@ -1,6 +1,7 @@
 package com.itmo.kotiki.controller;
 
 import com.itmo.kotiki.dto.KittyDto;
+import com.itmo.kotiki.entity.Color;
 import com.itmo.kotiki.entity.Kitty;
 import com.itmo.kotiki.service.KittyService;
 import org.modelmapper.ModelMapper;
@@ -8,10 +9,8 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
 
-import java.time.LocalDate;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/kitty")
@@ -26,15 +25,23 @@ class KittyController {
         this.modelMapper = modelMapper;
     }
 
-    @GetMapping
+    @GetMapping("/ByColor/{color}")
     @ResponseBody
-    public List<KittyDto> findAll() {
-        return kittyService.findAll().stream()
+    public List<KittyDto> findAllByColor(@PathVariable Color color) {
+        return kittyService.findAll(color).stream()
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    @GetMapping(value = "/{id}")
+    @GetMapping("/ByBreed/{breed}")
+    @ResponseBody
+    public List<KittyDto> findAllByBreed(@PathVariable String breed) {
+        return kittyService.findAll(breed).stream()
+                .map(this::convertToDto)
+                .toList();
+    }
+
+    @GetMapping("/{id}")
     @ResponseBody
     public KittyDto findById(@PathVariable("id") Long id) {
         return convertToDto(kittyService.findById(id));
@@ -43,7 +50,6 @@ class KittyController {
     @PostMapping
     @ResponseStatus(HttpStatus.CREATED)
     public KittyDto create(@RequestBody KittyDto kittyDto) {
-        // Preconditions.checkNotNull(resource);
         Kitty kitty = kittyService.save(convertToEntity(kittyDto));
         return convertToDto(kitty);
     }
@@ -51,8 +57,6 @@ class KittyController {
     @PutMapping(value = "/{id}")
     @ResponseStatus(HttpStatus.OK)
     public KittyDto updatePost(@PathVariable("id") Long id, @RequestBody KittyDto kittyDto) { // TODO: DTO
-//        Preconditions.checkNotNull(resource);
-//        RestPreconditions.checkNotNull(service.getById(resource.getId()));
         if (!Objects.equals(id, kittyDto.getId()))
             throw new IllegalArgumentException("IDs don't match");
         Kitty kitty = convertToEntity(kittyDto);
@@ -65,13 +69,17 @@ class KittyController {
         kittyService.delete(id);
     }
 
-    private KittyDto convertToDto(Kitty kitty) {
-        KittyDto kittyDto = modelMapper.map(kitty, KittyDto.class); // TODO: Enum mapping
-        return kittyDto;
+    @PatchMapping
+    @ResponseStatus(HttpStatus.OK)
+    public void addFriend(Long kittyId, Long friendId) {
+        kittyService.addFriend(kittyId, friendId);
     }
 
-    private Kitty convertToEntity(KittyDto kittyDto){
-        Kitty kitty = modelMapper.map(kittyDto, Kitty.class); // TODO: Enum mapping
-        return kitty;
+    private KittyDto convertToDto(Kitty kitty) {
+        return modelMapper.map(kitty, KittyDto.class);
+    }
+
+    private Kitty convertToEntity(KittyDto kittyDto) {
+        return modelMapper.map(kittyDto, Kitty.class);
     }
 }
